[tool.poetry]
name = "fast_api_tutorial"
version = "0.1.0"
description = ""
authors = ["Yanir Haim <44037204+yanirhaim@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.18.3"
fastapi = "^0.81.0"
pydantic = "^1.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
